stop hiding scrollbar on mobiles

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -102,3 +102,25 @@ inimigosWrapper img{
             height:40vh;
     }
 }
+
+::-webkit-scrollbar {
+   -webkit-appearance: none;
+}
+
+::-webkit-scrollbar:vertical {
+   width: 10px;
+}
+
+::-webkit-scrollbar:horizontal {
+   height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+   background-color: #ccc;
+   border-radius: 10px;
+   border: 2px solid #eee;
+}
+
+::-webkit-scrollbar-track { 
+   background-color: #eee; 
+}
